TRR: We don't use DNS cache at all for the URL of DoH server
Categories
(Core :: Networking: DNS, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox73 | --- | unaffected |
firefox74 | + | fixed |
firefox75 | + | fixed |
People
(Reporter: kershaw, Assigned: kershaw)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [necko-triaged])
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
In our current implementation, NS_HTTP_REFRESH_DNS
[1] is set to the http channel that connects to the DoH server.
This causes the URL is resolved every time without using the DNS cache.
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 1•5 years ago
|
||
Comment 3•5 years ago
|
||
bugherder |
Updated•5 years ago
|
[Tracking Requested - why for this release]:
This fixes a performance regression in Firefox 74.
Should be nominated for beta uplift.
Assignee | ||
Comment 5•5 years ago
|
||
Comment on attachment 9129154 [details]
Bug 1618173 - Don't set NS_HTTP_REFRESH_DNS for TRR service channel
Beta/Release Uplift Approval Request
- User impact if declined: Performance of DNS request is a bit dropped.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The patch is quite simple and it only affects whether to read data from DNS cache.
- String changes made/needed: N/A
Comment 6•5 years ago
|
||
Comment on attachment 9129154 [details]
Bug 1618173 - Don't set NS_HTTP_REFRESH_DNS for TRR service channel
Perf gain, low risk patch, uplift approved for 74 beta 9, thanks.
Comment 7•5 years ago
|
||
bugherder uplift |
Updated•5 years ago
|
Updated•5 years ago
|
Comment 8•5 years ago
|
||
== Change summary for alert #25140 (as of Thu, 27 Feb 2020 08:52:38 GMT) ==
Improvements:
27% raptor-tp6m-instagram-geckoview-cold loadtime android-hw-p2-8-0-android-aarch64 pgo 2,070.04 -> 1,520.33
16% raptor-tp6m-bbc-geckoview-cold loadtime android-hw-g5-7-0-arm7-api-16 pgo 4,550.15 -> 3,800.50
14% raptor-tp6m-instagram-geckoview-cold android-hw-p2-8-0-android-aarch64 pgo 556.69 -> 477.65
11% raptor-tp6-microsoft-firefox-cold loadtime macosx1014-64-shippable opt 1,198.08 -> 1,071.08
10% raptor-tp6m-instagram-geckoview-cold loadtime android-hw-g5-7-0-arm7-api-16 pgo 3,328.58 -> 2,983.38
2% raptor-tp6-office-firefox-cold linux64-shippable-qr opt 462.94 -> 451.49
2% raptor-tp6-office-firefox-cold fcp linux64-shippable-qr opt 453.88 -> 442.92
For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=25140
Description
•