Bug 1618173 - Don't set NS_HTTP_REFRESH_DNS for TRR service channel r=valentin a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D64370